# Temp_hum_matter

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_driver.cpp  app_driver.h  app_main.cpp  app_priv.h  i2c_oled_display.c  i2c_oled_display.h  idf_component.yml  sensor_data.h
main/my_images/: humidity_icon.c  humidity_icon_32.c  my_images.h  temperature_icon.c  temperature_icon_32.c
main/my_screens/: my_screens.c  my_screens.h
